Updated like buttons

--- a/templates/critter.html
+++ b/templates/critter.html
@@ -57,36 +57,30 @@
                 Stories by {{ user.username }} (creator)
             </h3>
 
-            {% if stories %}
+            {% if creator_stories %}
                 <div class="story-card-grid">
-                    {% for story in stories %}
-                        {% if story.uid == user.uid %}
-                        <div class="story-card pastel-box">
-                            <a href="{{ url_for('story_page', sid=story.sid, cid=critter_info.cid) }}"
-                            class="story-card-link">
-                            <p>{{ story.critter_story }}</p>
+                    {% for story in creator_stories %}
+                        <a href="{{ url_for('story_page', sid=story.sid, cid=critter_info.cid) }}"
+                        class="story-card pastel-box story-card-link">
+                        <p>{{ story.critter_story }}</p>
 
-                            <div class="like-btn-story">
-                                <button value="like"
-                                        type="button"
-                                        class="like-btn"
-                                        data-sid="{{ story.sid }}"
-                                        data-story="{{ url_for('like_story_feature', sid=story.sid) }}"
-                                        aria-label="Like this critter">
-                                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                                        <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
-                                    </svg>
+                        <div class="like-btn-story">
+                            <button value="like"
+                                    type="button"
+                                    class="like-btn"
+                                    data-sid="{{ story.sid }}"
+                                    data-story="{{ url_for('like_story_feature', sid=story.sid) }}"
+                                    aria-label="Like this critter">
+                                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                    <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
+                                </svg>
 
-                                    <div class="like-count-display-story" >
-                                    <span class="like-count-story">{{ story.story_likes }}</span> 
-                                    </div>
-                                </button>
-                            </div>
-                            </a>
-
-                            
+                                <div class="like-count-display-story" >
+                                <span class="like-count-story">{{ story.story_likes }}</span> 
+                                </div>
+                            </button>
                         </div>
-                        {% endif %}
+                        </a>
                     {% endfor %}
                     </div>
 
@@ -100,19 +94,16 @@
                 Stories by other users
             </h3>
 
-            {% if stories %}
+            {% if other_stories %}
                 <div class="story-card-grid">
-                    {% for story in stories %}
-                        {% if story.uid != user.uid %}
-                        <div class="story-card pastel-box">
-                            <a href="{{ url_for('story_page', sid=story.sid, cid=critter_info.cid) }}" 
-                            class="story-card-link">
-                                <p>{{ story.critter_story }}</p>
-                                <a href="{{ url_for('user_profile', uid=story.uid) }}">
-                                    By {{story.username}}
-                                </a>
+                    {% for story in other_stories %}
+                        <a href="{{ url_for('story_page', sid=story.sid, cid=critter_info.cid) }}" 
+                        class="story-card pastel-box story-card-link">
+                            <p>{{ story.critter_story }}</p>
+                            <span class="story-author">By {{ story.username }}</span>
+                            <br>
 
-                                <div class="like-btn-story">
+                            <div class="like-btn-story">
                                 <button value="like"
                                         type="button"
                                         class="like-btn"
@@ -123,14 +114,12 @@
                                         <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
                                     </svg>
 
-                                    <div class="like-count-display-story" >
+                                    <div class="like-count-display-story">
                                     <span class="like-count-story">{{ story.story_likes }}</span> 
                                     </div>
                                 </button>
-                                </div>
-                            </a>
-                        </div>
-                        {% endif %}
+                            </div>
+                        </a>
                     {% endfor %}
                 </div>
             {% else %}
