fixed all the wave errors and added likes numbers back to liked critters

--- a/static/colors.css
+++ b/static/colors.css
@@ -9,6 +9,8 @@
   --rosewood: #A45C68;
   --sand-beige: #E7D6B4;
   --sage-green: #678A7B;
+  --tan-link-color:#A45C68;
+  --title-color:#5F274F;
 
   --submit-button: white;
   --accent-plum: #5F274F;
@@ -41,6 +43,8 @@
   --accent-rosewood: #CF919A;
   --accent-sage: #6C9689;
   --accent-mustard: #BE922A;
+  --tan-link-color:#482a2f;
+  --title-color:#dd65c1;
 
   --button-text: #eb7fc7;
   --story-author:#dd65c1;
