--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,10 +38,10 @@
         </section>
 
         <div class="tab-container">
-            <button class="tablink" onclick="openPage('Critters', this, 'var(--accent-rosewood)')" id="defaultOpen">Critters</button>
-            <button class="tablink" onclick="openPage('Stories', this, 'var(--accent-rosewood)')">Stories</button>
-            <button class="tablink" onclick="openPage('Liked_Critters', this, 'var(--accent-rosewood)')">Liked Critters</button>
-            <button class="tablink" onclick="openPage('Liked_Stories', this, 'var(--accent-rosewood)')">Liked Stories</button>
+            <button class="tablink" onclick="openPage('Critters', this, 'var(--tan-link-color)')" id="defaultOpen">Critters</button>
+            <button class="tablink" onclick="openPage('Stories', this, 'var(--tan-link-color)')">Stories</button>
+            <button class="tablink" onclick="openPage('Liked_Critters', this, 'var(--tan-link-color)')">Liked Critters</button>
+            <button class="tablink" onclick="openPage('Liked_Stories', this, 'var(--tan-link-color)')">Liked Stories</button>
         </div>
 
         <div id="Critters" class="tabcontent">
@@ -108,24 +108,26 @@
                         <img src="{{ url_for('uploaded_file', filename=critter.imagepath) }}"
                             alt="{{ critter.name }}">
                         <p>{{ critter.name }}</p>
+
+                        <div class="like-btn-container">
+                            <button value="like"
+                                    type="button"
+                                    class="like-btn"
+                                    data-cid="{{ critter.cid }}"
+                                    data-url="{{ url_for('like_feature_critter', cid=critter.cid) }}"
+                                    aria-label="Like this critter">
+                                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                    <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
+                                </svg>
+
+                                <div class="like-count-display-story">
+                                    <span class="like-count">{{ critter.likes }}</span> 
+                                </div>
+                            </button>
+                        </div>
                     </a>
 
-                    <div class="like-btn-container">
-                        <button value="like"
-                                type="button"
-                                class="like-btn"
-                                data-cid="{{ critter.cid }}"
-                                data-url="{{ url_for('like_feature_critter', cid=critter.cid) }}"
-                                aria-label="Like this critter">
-                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                                <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
-                            </svg>
-                        </button>
-
-                        <div class="like-count-display">
-                            <span class="like-count">{{ critter.likes }}</span> 
-                        </div>
-                    </div>
+                
                 </div>
                 {% endfor %}
             </div>
