--- a/static/style.css
+++ b/static/style.css
@@ -1180,7 +1180,7 @@ body, html {
     margin: 0;
 }
 
-/* Search Form */
+/* Sort Search Form */
 .sort-search .search {
     overflow: hidden;
     min-width: 0;
