--- a/templates/user_lookup.html
+++ b/templates/user_lookup.html
@@ -9,6 +9,7 @@
 
 {% block main_content %}      
 
+<!-- sort search results form -->
 <div class="topsection" id="first_main">
     <div class="sort-search">
         <form class="search" method="GET" action="{{ url_for('sort_user_results', query=query) }}">
