--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,10 +30,13 @@
                 <h1 class="critter-name">{{ user.name }}</h1>
                 <h4>@{{ user.username }}</h4>
                 <h4>{{ user.created }}</h4>
-                <a href="{{ url_for('critter_upload') }}"
-                class="button-primary write-story-btn">
-                Create a new critter
-                </a>
+
+                {% if session.get('uid') == user.uid %}
+                    <a href="{{ url_for('critter_upload') }}"
+                    class="button-primary write-story-btn">
+                    Create a new critter
+                    </a>
+                {% endif %}
             </div>
         </section>
 
