--- a/templates/profile.html
+++ b/templates/profile.html
@@ -124,7 +124,7 @@
                                 </svg>
 
                                 <div class="like-count-display-story">
-                                    <span class="like-count">{{ critter.likes }}</span> 
+                                    <span class="like-count">{{ critter.like_count }}</span> 
                                 </div>
                             </button>
                         </div>
