add story lookup and sorting

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,7 @@
               <select required name="kind">
                   <option value="user">user</option>
                   <option value="critter">critter</option>
+                  <option value="story">story</option>
               </select>
           <!-- </label> -->
 
