--- a/templates/main.html
+++ b/templates/main.html
@@ -9,6 +9,27 @@
 
 {% block main_content %}
 
+<!-- sort home page form -->
+<div class="topsection" id="first_main">
+    <div class="sort-search">
+        <form class="search" method="GET" action="{{ url_for('index_sorted') }}">
+            <label>sort by:
+                <select required name="value">
+                    <option value="name">critter name</option>
+                    <option value="username">creator username</option>
+                    <option value="created">date created</option>
+                    <option value="like_count">like count</option>
+                </select>
+            </label>
+            <select required name="sort">
+                <option value="ascending">ascending</option>
+                <option value="descending">descending</option>
+            </select>
+            <input type="submit" value="apply">
+        </form>
+    </div>
+</div>
+
 <section class="main-header">
     <h1>CritterCave</h1>
     <p>A cozy home for cataloging creatures big and small</p>
